--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
-EXAMPLE
+ACCESS_TOKEN_SECRET=
+REFRESH_TOKEN_SECRET=
+PORT=8080
+DB_PORT=5432
+DB_PASSWORD=password
+DB_NAME=test-db
+DB_USER=postgres
+DB_HOST=db
+
